objects/asb_Log__c.object
<CustomObject><fields>
        <fullName>Category__c</fullName>
        <description>The category of the logged event.</description>
        <inlineHelpText>The category of the logged event.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Data__c</fullName>
        <description>The data captured in the logged event.</description>
        <inlineHelpText>The data captured in the logged event.</inlineHelpText>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Exception__c</fullName>
        <description>Details of the exception thrown in the logged event.</description>
        <inlineHelpText>Details of the exception thrown in the logged event.</inlineHelpText>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the logged event.</description>
        <inlineHelpText>Severity of the logged event.</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>StackTraceId__c</fullName>
        <description>A unique ID for the particular type of error. Can be used to track how often the error occurs.</description>
        <inlineHelpText>A unique ID for the particular type of error. Can be used to track how often the error occurs.</inlineHelpText>
        <label>Stack Trace ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Logs to capture information to assist with debugging if needed.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Log</label><nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Logs</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>